# McGrids

./: .gitignore  CMakeLists.txt  README.md  example.py  fast_cvt3d.cpp  fast_cvt3d.h  main.cpp  marching_cube.py  mcgrids.py  mcgrids_curvature.py  mesh_sdf.py  metrics.py  pyproject.toml  sdfs3d.py
differentiable_mcmt/: CMakeLists.txt  KDTreeVectorOfVectorsAdaptor.hpp  fast_mcmt.cpp  fast_mcmt.hpp  kdtree.hpp  main.cpp  mcmt.cpp  mcmt.hpp  nanoflann.hpp  sdfs.hpp
examples/: extract_mesh_from_nglod.py  extract_mesh_from_rounded_box.py  extract_mesh_from_sdf.py  extract_sdf_from_mesh.py  mesh_sdf.py
experiments/DMT/: loss.py  main.py  mcmt_helper.py  networks.py  utils.py
include/mcmt/: mcmt.hpp
python/: CMakeLists.txt  mcmt.cpp
