[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "mcmt"
version = "0.0.7"
description = "mcmt"
readme = "README.md"
license = {text = "MIT"}
authors=[{name="Shi Hezi", email="hezi001@e.ntu.edu.sg"}]
requires-python = ">=3.7"
classifiers=[
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy<2.0",
    "torch ~= 2.2.0",
    "pymcubes",
    "open3d",
    "tqdm",
    "matplotlib",
    "fastsweep",
    "drjit"
]

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"
BUILD_TESTING = "OFF"
BUILD_DOCS = "OFF"
